styling fixes bg and spacing

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -83,6 +83,7 @@ body {
 
 .responsive-table {
   padding: 0;
+  margin: 0;
 
   li {
     padding: $spacing1 $spacing2;
